# cherry-core

./: .gitignore  2  Cargo.toml  README.md  \
.github/workflows/: ci.yaml  publish-python.yaml  release.yml
arrow-schema-derive/: Cargo.toml
arrow-schema-derive/src/: lib.rs
cast/: Cargo.toml
cast/src/: lib.rs
column-mapping/: Cargo.toml
column-mapping/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs  tests.rs
evm-decode/: Cargo.toml
evm-decode/src/: lib.rs
evm-schema/: Cargo.toml
evm-schema/src/: lib.rs
evm-validate/: Cargo.toml
evm-validate/src/: issues_collector.rs  lib.rs
ingest/: Cargo.toml
ingest/examples/: test_rpc_provider.rs
ingest/src/: evm.rs  lib.rs  svm.rs
ingest/src/provider/: common.rs  hypersync.rs  mod.rs  rpc.rs  sqd.rs  yellowstone_grpc.rs
python/: .gitignore  Cargo.toml  README.md  cherry_core.pyi  pyproject.toml  test.py
python/cherry_core/: __init__.py  ingest.py
python/cherry_core/ingest/: __init__.py  evm.py  svm.py
python/cherry_core/svm_decode/: __init__.py
python/examples/: .env  base58.py  cherry_ingest_erc20.py  cryo_erc20.py  cryo_erc20_datafusion.py  hypersync_continuous.py  solana.py  solana_all.py  sqd_continuous.py  svm_decode.py  svm_decode_instruction.py  svm_decode_log.py  test_rpc_vs_hypersync.py  token_metadata.py  v2_pool_tokens.py  v_r_s_schema.py  yellowstone_grpc.py
python/src/: ingest.rs  lib.rs
query/: Cargo.toml
query/src/: lib.rs
rpc_call/: Cargo.toml
rpc_call/src/: lib.rs
svm-decode/: Cargo.toml  JUP6LkbZbjS1jKKwapdHNy74zcZ3tLUZoi5QNyVTaV4.json  decoded_instructions.parquet  filtered_instructions.parquet  filtered_instructions2.parquet
svm-decode/src/: arrow_converter.rs  deserialize.rs  jup_program.rs  lib.rs  program.rs
svm-schema/: Cargo.toml
svm-schema/src/: lib.rs
