[workspace]
resolver = "2"
members = [
  "evm-decode",
  "cast",
  "evm-validate",
  "core",
  "evm-schema",
  "python",
  "ingest",
  "svm-schema",
]

[workspace.dependencies]
arrow = "54.2.1"
alloy-dyn-abi = "0.8.21"
alloy-json-abi = "0.8.21"
alloy-primitives = "0.8.21"
alloy-consensus = "0.11.1"
alloy-eips = "0.11.1"
ruint = "1"
anyhow = "1"
log = "0.4"
faster-hex = "0.10"
futures-lite = "2"
tokio = { version = "1", default-features = false }
tokio-stream = "0.1"
pyo3 = "0.23"
sqd-portal-client = "0.0.13"
hypersync-client = "0.17"
serde = "1"
serde_json = "1"
polars-arrow = "0.42"
bincode = "1.3.3"
chrono = "0.4"
bs58 = "0.5"
