[package]
name = "cherry-core"
version = "0.0.3"
edition = "2021"
description = "Core library for cherry blockchain data framework"
homepage = "https://github.com/steelcake/cherry-core"
repository = "https://github.com/steelcake/cherry-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
cherry-evm-validate = { path = "../evm-validate", version = "0.0.1" }
cherry-evm-decode = { path = "../evm-decode", version = "0.0.2" }
cherry-cast = { path = "../cast", version = "0.0.1" }
cherry-evm-schema = { path = "../evm-schema", version = "0.0.1" }

[dev-dependencies]
hypersync-client = "0.17"
tokio = { version = "1", features = ["full"] }
polars-arrow = "0.42"
arrow = { workspace = true, features = ["ffi"]}
serde_json = "1"
