[package]
name = "cherry-core"
version = "0.0.15"
edition = "2021"
description = "Core library for cherry blockchain data framework"
homepage = "https://github.com/steelcake/cherry-core"
repository = "https://github.com/steelcake/cherry-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
cherry-evm-validate = { path = "../evm-validate", version = "0.0.1" }
cherry-evm-decode = { path = "../evm-decode", version = "0.0.2" }
cherry-cast = { path = "../cast", version = "0.0.4" }
cherry-evm-schema = { path = "../evm-schema", version = "0.0.3" }
cherry-svm-schema = { path = "../svm-schema", version = "0.0.3" }
cherry-ingest = { path = "../ingest", version ="0.0.6" }

[dev-dependencies]
hypersync-client = { workspace = true } 
tokio = { version = "1", features = ["full"] }
polars-arrow = { workspace = true } 
arrow = { workspace = true, features = ["ffi"]}
serde_json = "1"
futures-lite = "2"
faster-hex = { workspace = true }

[features]
pyo3 = ["cherry-ingest/pyo3"]
