[package]
name = "cherry-evm-validate"
version = "0.1.0"
edition = "2021"
description = "EVM data validation in Arrow format"
homepage = "https://github.com/steelcake/cherry-core"
repository = "https://github.com/steelcake/cherry-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
arrow = { workspace = true }
anyhow = { workspace = true }
faster-hex = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
