[package]
name = "cherry-core-python"
version = "0.0.10"
edition = "2021"
description = "Core library for cherry blockchain data framework"
homepage = "https://github.com/steelcake/cherry-core"
repository = "https://github.com/steelcake/cherry-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[lib]
name = "cherry_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["anyhow", "experimental-async"] }
baselib = { package = "cherry-core", path = "../core", features = ["pyo3"] }
arrow = { workspace = true , features = ["pyarrow"] }
anyhow = { workspace = true } 
faster-hex = { workspace = true } 
futures-lite = { workspace = true }
sqd-portal-client = { workspace = true }
tokio = { workspace = true, features = ["full"] }

