[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "berry-core"
version = "0.6.5"
description = "High-performance blockchain data processing library forked from cherry-core"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Yaser Martinez Palenzuela", email = "yaser.martinez@gmail.com"},
    {name = "Ozgur Akkurt", email = "oezgurmakkurt@gmail.com"},
]
keywords = ["blockchain", "ethereum", "solana", "data", "indexing", "web3", "defi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Database",
]
requires-python = ">=3.8"
dependencies = [
    "pyarrow>=10.0.0",
    "polars>=0.20.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
