[package]
name = "cherry-svm-decode"
version = "0.0.1"
edition = "2021"
description = "SVM decoding implementations in Arrow format"
homepage = "https://github.com/steelcake/cherry-core"
repository = "https://github.com/steelcake/cherry-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>, Yule <yule@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
arrow = { workspace = true }
anchor-lang = "0.31.0"
anyhow = { workspace = true }
log = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
borsh = "1"
parquet = "54"
